// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption component tests color = default, disabled = false 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12.25,
        "includeFontPadding": false,
        "letterSpacing": -0.25,
        "lineHeight": 15,
        "verticalAlign": "middle",
      },
      {
        "color": "#2b2e33",
      },
      false,
      undefined,
      undefined,
    ]
  }
  testID="CaptionText"
>
  Text
</Text>
`;

exports[`Caption component tests color = default, disabled = false 2`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 3.5,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#2b2e33"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    testID="CaptionIcon"
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4281019955,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M12 9h.01"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M11 12h1v4h1"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      [
        {
          "fontFamily": "Noto Sans",
          "fontSize": 12.25,
          "includeFontPadding": false,
          "letterSpacing": -0.25,
          "lineHeight": 15,
          "verticalAlign": "middle",
        },
        {
          "color": "#2b2e33",
        },
        false,
        {
          "flexShrink": 1,
        },
        undefined,
      ]
    }
    testID="CaptionText"
  >
    Text
  </Text>
</View>
`;

exports[`Caption component tests color = default, disabled = true 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12.25,
        "includeFontPadding": false,
        "letterSpacing": -0.25,
        "lineHeight": 15,
        "verticalAlign": "middle",
      },
      {
        "color": "#2b2e33",
      },
      {
        "opacity": 0.6,
      },
      undefined,
      undefined,
    ]
  }
  testID="CaptionText"
>
  Text
</Text>
`;

exports[`Caption component tests color = default, disabled = true 2`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 3.5,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#2b2e33"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    testID="CaptionIcon"
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4281019955,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M12 9h.01"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M11 12h1v4h1"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      [
        {
          "fontFamily": "Noto Sans",
          "fontSize": 12.25,
          "includeFontPadding": false,
          "letterSpacing": -0.25,
          "lineHeight": 15,
          "verticalAlign": "middle",
        },
        {
          "color": "#2b2e33",
        },
        {
          "opacity": 0.6,
        },
        {
          "flexShrink": 1,
        },
        undefined,
      ]
    }
    testID="CaptionText"
  >
    Text
  </Text>
</View>
`;

exports[`Caption component tests color = primary, disabled = false 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12.25,
        "includeFontPadding": false,
        "letterSpacing": -0.25,
        "lineHeight": 15,
        "verticalAlign": "middle",
      },
      {
        "color": "#44e858",
      },
      false,
      undefined,
      undefined,
    ]
  }
  testID="CaptionText"
>
  Text
</Text>
`;

exports[`Caption component tests color = primary, disabled = false 2`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 3.5,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#44e858"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    testID="CaptionIcon"
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4282706008,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4282706008,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M12 9h.01"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4282706008,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M11 12h1v4h1"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4282706008,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      [
        {
          "fontFamily": "Noto Sans",
          "fontSize": 12.25,
          "includeFontPadding": false,
          "letterSpacing": -0.25,
          "lineHeight": 15,
          "verticalAlign": "middle",
        },
        {
          "color": "#44e858",
        },
        false,
        {
          "flexShrink": 1,
        },
        undefined,
      ]
    }
    testID="CaptionText"
  >
    Text
  </Text>
</View>
`;

exports[`Caption component tests color = primary, disabled = true 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12.25,
        "includeFontPadding": false,
        "letterSpacing": -0.25,
        "lineHeight": 15,
        "verticalAlign": "middle",
      },
      {
        "color": "#44e858",
      },
      {
        "opacity": 0.6,
      },
      undefined,
      undefined,
    ]
  }
  testID="CaptionText"
>
  Text
</Text>
`;

exports[`Caption component tests color = primary, disabled = true 2`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 3.5,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#44e858"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    testID="CaptionIcon"
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4282706008,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4282706008,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M12 9h.01"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4282706008,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M11 12h1v4h1"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4282706008,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      [
        {
          "fontFamily": "Noto Sans",
          "fontSize": 12.25,
          "includeFontPadding": false,
          "letterSpacing": -0.25,
          "lineHeight": 15,
          "verticalAlign": "middle",
        },
        {
          "color": "#44e858",
        },
        {
          "opacity": 0.6,
        },
        {
          "flexShrink": 1,
        },
        undefined,
      ]
    }
    testID="CaptionText"
  >
    Text
  </Text>
</View>
`;

exports[`Caption component tests color = secondary, disabled = false 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12.25,
        "includeFontPadding": false,
        "letterSpacing": -0.25,
        "lineHeight": 15,
        "verticalAlign": "middle",
      },
      {
        "color": "#85888e",
      },
      false,
      undefined,
      undefined,
    ]
  }
  testID="CaptionText"
>
  Text
</Text>
`;

exports[`Caption component tests color = secondary, disabled = false 2`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 3.5,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#85888e"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    testID="CaptionIcon"
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4286941326,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M12 9h.01"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M11 12h1v4h1"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      [
        {
          "fontFamily": "Noto Sans",
          "fontSize": 12.25,
          "includeFontPadding": false,
          "letterSpacing": -0.25,
          "lineHeight": 15,
          "verticalAlign": "middle",
        },
        {
          "color": "#85888e",
        },
        false,
        {
          "flexShrink": 1,
        },
        undefined,
      ]
    }
    testID="CaptionText"
  >
    Text
  </Text>
</View>
`;

exports[`Caption component tests color = secondary, disabled = true 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12.25,
        "includeFontPadding": false,
        "letterSpacing": -0.25,
        "lineHeight": 15,
        "verticalAlign": "middle",
      },
      {
        "color": "#85888e",
      },
      {
        "opacity": 0.6,
      },
      undefined,
      undefined,
    ]
  }
  testID="CaptionText"
>
  Text
</Text>
`;

exports[`Caption component tests color = secondary, disabled = true 2`] = `
<View
  style={
    {
      "flexDirection": "row",
      "gap": 3.5,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={14}
    bbWidth={14}
    fill="none"
    focusable={false}
    height={14}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#85888e"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 14,
          "width": 14,
        },
      ]
    }
    testID="CaptionIcon"
    vbHeight={24}
    vbWidth={24}
    width={14}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4286941326,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M12 9h.01"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
      <RNSVGPath
        d="M11 12h1v4h1"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
        testID="CaptionIcon"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      [
        {
          "fontFamily": "Noto Sans",
          "fontSize": 12.25,
          "includeFontPadding": false,
          "letterSpacing": -0.25,
          "lineHeight": 15,
          "verticalAlign": "middle",
        },
        {
          "color": "#85888e",
        },
        {
          "opacity": 0.6,
        },
        {
          "flexShrink": 1,
        },
        undefined,
      ]
    }
    testID="CaptionText"
  >
    Text
  </Text>
</View>
`;

exports[`Caption component tests default props 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "Noto Sans",
        "fontSize": 12.25,
        "includeFontPadding": false,
        "letterSpacing": -0.25,
        "lineHeight": 15,
        "verticalAlign": "middle",
      },
      {
        "color": "#2b2e33",
      },
      undefined,
      undefined,
      undefined,
    ]
  }
  testID="CaptionText"
>
  Text
</Text>
`;
